# VulkanTriangle

./: .clang-format  .gitignore  .gitmodules  Application.cpp  Application.hpp  CMakeLists.txt  Device.cpp  Device.hpp  DeviceHelper.hpp  Engine.cpp  Engine.hpp  Makefile  OBJLoader.cpp  README.md  Scene.cpp  Utility.hpp  Vertex.hpp  VulkanTest  config.hpp  main.cpp  project_config.py  scene.txt
shaders/: frag.spv  shader.frag  shader.vert  vert.spv
src/: Application.cpp  Application.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CommandBuffer.cpp  CommandBuffer.hpp  Components.hpp  Device.cpp  Device.hpp  DeviceHelper.hpp  GPUResources.hpp  Input.cpp  Input.hpp  Memory.cpp  Memory.hpp  ModelLoader.cpp  ModelLoader.hpp  OBJLoader.cpp  OBJLoader.hpp  Primitives.cpp  Primitives.hpp  Renderer.cpp  Renderer.hpp  ResourceLoader.cpp  ResourceLoader.hpp  Scene.cpp  Scene.hpp  Timer.cpp  Timer.hpp  Utility.cpp  Utility.hpp  Vertex.hpp  config.cpp  config.hpp  main.cpp
